--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="🔥Like🔥">
 <meta property="og:description" content="💥Super💥">
-<meta property="og:image" content="https://images.wallpaperscraft.com/image/single/yamaha_yzfr6_yamaha_motorcycle_901288_1280x720.jpg">
+<meta property="og:image" content="https://i.imgur.com/7vBYOuh.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
