--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="🔥Like🔥">
 <meta property="og:description" content="💥Super💥">
-<meta property="og:image" content="https://i.imgur.com/95kJO6l.jpg">
+<meta property="og:image" content="https://i.imgur.com/H04b06g.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
