--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Like🔥">
-<meta property="og:description" content="💥Super💥">
+<meta property="og:title" content="🔥¡¿Cómo agrandé mi pene unos 5,5 cm en 14 días?!🍆🔥">
+<meta property="og:description" content="">
 <meta property="og:image" content="https://i.imgur.com/f5H6eeV.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
